# mfldemo

./: .gitignore  CMakeLists.txt  README
Modules/: FindCoin.cmake  FindSoQt.cmake
src/: CMakeLists.txt  FormMain.ui  FormMainCtrl.cpp  FormMainCtrl.h  LeonardoConfiguration.cpp  LeonardoConfiguration.h  LeonardoControl.cpp  LeonardoControl.h  LeonardoModel.cpp  LeonardoModel.h  main.cpp
