PROJECT(MFLDEMO)

IF (CMAKE_BUILD_TYPE)
	STRING(TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE)
	STRING(COMPARE EQUAL ${BUILD_TYPE} "debug" DEBUG)
	STRING(COMPARE EQUAL ${BUILD_TYPE} "relwithdebinfo" RELWITHDEBINFO)
	IF (DEBUG OR RELWITHDEBINFO)
		ADD_DEFINITIONS(-DDEBUG)
	ENDIF (DEBUG OR RELWITHDEBINFO)
ENDIF (CMAKE_BUILD_TYPE)

INCLUDE(${CMAKE_ROOT}/Modules/FindQt.cmake)
INCLUDE(${ROOT_SOURCE_DIR}/Modules/FindCoin.cmake)
INCLUDE(${ROOT_SOURCE_DIR}/Modules/FindSoQt.cmake)
INCLUDE(${ROOT_SOURCE_DIR}/Modules/Findsimage.cmake)

ADD_DEFINITIONS(-DCOIN_NOT_DLL -DSOQT_NOT_DLL ${QT_DEFINITIONS})

CONFIGURE_FILE(${MFLDEMO_SOURCE_DIR}/config.h.in ${MFLDEMO_BINARY_DIR}/config.h)

QT_WRAP_UI(mfldemo FORMMAIN_HEADERS FORMMAIN_SOURCES FormMain.ui)
QT_WRAP_CPP(mfldemo FORMMAINCTRL_SOURCES FormMainCtrl.h)
QT_WRAP_CPP(mfldemo LEONARDOCONTROL_SOURCES LeonardoControl.h)

INCLUDE_DIRECTORIES(
	${QT_INCLUDE_DIR}
	${COIN_INCLUDE_DIR}
	${SOQT_INCLUDE_DIR}
	${MFLDEMO_BINARY_DIR}
	${MFLDEMO_SOURCE_DIR}
)

SET(HDRS
	FormMainCtrl.h
	LeonardoModel.h
	LeonardoControl.h
	LeonardoConfiguration.h
	main.h
	simhelper/soqt/SaveDialogGl.h
)

SET(SRCS
	FormMainCtrl.cpp
	LeonardoModel.cpp
	LeonardoControl.cpp
	LeonardoConfiguration.cpp
	main.cpp
	simhelper/soqt/SaveDialogGl.cpp
)	

IF (WIN32)
	ADD_EXECUTABLE(mfldemo WIN32 ${HDRS} ${SRCS} ${FORMMAIN_SOURCES} ${FORMMAINCTRL_SOURCES} ${LEONARDOCONTROL_SOURCES})
ELSE (WIN32)
	IF (APPLE)
		ADD_EXECUTABLE(mfldemo MACOSX_BUNDLE ${HDRS} ${SRCS} ${FORMMAIN_SOURCES} ${FORMMAINCTRL_SOURCES} ${LEONARDOCONTROL_SOURCES})
	ELSE(APPLE)
		ADD_EXECUTABLE(mfldemo ${HDRS} ${SRCS} ${FORMMAIN_SOURCES} ${FORMMAINCTRL_SOURCES} ${LEONARDOCONTROL_SOURCES})
	ENDIF(APPLE)
ENDIF (WIN32)
TARGET_LINK_LIBRARIES(mfldemo ${QT_LIBRARIES} ${COIN_LIBRARY} ${SOQT_LIBRARY})

INSTALL_TARGETS(/bin mfldemo)
